# cch

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
npm/: README.md  install.js  package.json
src/: cli.rs  main.rs  paths.rs  session.rs  term.rs  timebounds.rs  transcript.rs
src/commands/: blame.rs  commits.rs  help_all.rs  mod.rs  session.rs  show.rs
src/commands/grep/: matcher.rs  mod.rs  opts.rs  render.rs  scan.rs  snippet.rs
tests/: integration.rs
