[package]
name = "cch"
version = "0.1.1"
edition = "2021"
rust-version = "1.95"
description = "Fast CLI to navigate Claude Code sessions (JSONL transcripts). Git-inspired: session, show, grep, blame, commits."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Salourh/cch"
homepage = "https://github.com/Salourh/cch"
readme = "README.md"
keywords = ["claude", "cli", "jsonl", "sessions", "transcripts"]
categories = ["command-line-utilities", "development-tools"]
authors = ["tim <tim@ttttttttttt.com>"]

[[bin]]
name = "cch"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
memchr = "2"
regex = { version = "1", default-features = false, features = ["std", "perf", "unicode-case"] }

[dev-dependencies]
filetime = "0.2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
